--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+aniso8601==8.0.0
+attrs==19.3.0
 click==7.1.2
 Flask==1.1.2
 Flask-Cors==3.0.8
-gunicorn==20.0.4
+flask-restplus==0.13.0
+gunicorn==19.9.0
+importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.15.1
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 nltk==3.5
+pyrsistent==0.16.0
+pytz==2020.1
 regex==2020.5.14
 six==1.15.0
 tqdm==4.46.0
-Werkzeug==1.0.1
+Werkzeug==0.16.0
+zipp==3.1.0
